--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,34 @@ body {
   background-color: #e6e6e6;
 }
 
+.text-light {
+    color: #727272;
+    font-size: 14px;
+    line-height: 28px;
+    margin-bottom: 35px;
+}
+
 /* MENU */
+
+.navbar-fixed nav {
+    height: 80px;
+    line-height: 80px;
+}
 
 nav ul a,
 nav .brand-logo {
   color: #4DB6AC;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 nav ul a {
   border-bottom: 6px solid transparent;
   text-transform: uppercase;
   color: #727272;
-  height: 64px;
+  height: 80px;
   transition: all 0.3s ease-out;
-  font-size: 15px;
+    font-size: 13px;
+    font-weight: 500;
 }
 
 nav ul a:hover {
@@ -26,12 +39,16 @@ nav ul a:hover {
 
 .parallax-container {
   overflow: visible;
+  background-color: rgba(0, 0, 0, 0.39);
 }
 
 /* BANNIERE */
 
 #index-banner {
-  background-color: #26a69a;
+    background: url('/images/fond_2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: 10%;
 }
 
 /* PROFIL */
@@ -65,7 +82,9 @@ h5.profile-job {
 }
 
 .container section#about .profil-img {
-  padding: 5px;
+    padding: 5px 5px 0px 5px;
+    border: 1px solid #D8D8D8;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .container section#about .profile-list li .title {
@@ -91,6 +110,7 @@ section#about .profile-list li {
 .profile-social {
   height: 60px;
   background-color: #26A69A;
+      line-height: 52px;
 }
 
 .profile-social .social {
@@ -210,6 +230,23 @@ h1.header {
 
 #education, #calendar {
 background: #26A69A;
+}
+
+#skills {
+  background: url('/images/fond.jpg');
+  height: 590px;
+  position: relative;
+}
+
+.overlay {
+    position: absolute;
+    background-color: rgba(230, 230, 230, .92);
+    line-height: 0;
+    color: rgba(255,255,255,.9);
+    overflow: visible;
+    top: 0;
+    width: 100%;
+    height: 590px;
 }
 
 .timeline {
@@ -734,10 +771,35 @@ p {
 
 footer.page-footer {
   margin: 0;
+  position: relative;
 }
 
 #contactForm {
       overflow: hidden;
+}
+
+#experience .row .col.s5:first-child {
+transform: translateX(-700px);
+  -webkit-transition: all 1.2s;
+  transition: all 1.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+}
+#experience .row .col.s5:not(:first-child) {
+transform: translateX(700px);
+  -webkit-transition: all 1.2s;
+  transition: all 1.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+}
+
+.timeline li {
+    opacity: 0;
+    transform: translateX(-100px);
+  -webkit-transition: all 1.2s;
+  transition: all 1.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+  transition-timing-function: cubic-bezier(0.7,0,0.3,1);
 }
 
 footer.page-footer {
@@ -746,4 +808,13 @@ footer.page-footer {
     text-align: center;
     margin-top: 50px;
     padding: 40px 0 20px;
+}
+
+.map-wrapper {
+  overflow: overlay;
+}
+
+.back-to-top {
+  position: absolute;
+  top: -20px;
 }
