--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,11 @@ nav .brand-logo {
   font-weight: 500;
 }
 
-nav ul a {
+nav ul:not(.side-nav) a {
   border-bottom: 6px solid transparent;
   text-transform: uppercase;
   color: #727272;
-  height: 80px;
+  height: 64px;
   transition: all 0.3s ease-out;
     font-size: 13px;
     font-weight: 500;
@@ -37,6 +37,17 @@ nav ul a:hover {
   background-color: transparent;
 }
 
+nav ul.side-nav a {
+  border: none;
+  border-left: 6px solid transparent;
+  background-color: transparent;
+}
+
+nav ul.side-nav a:hover {
+  border: none;
+  border-left: 6px solid #4DB6AC;
+}
+
 .parallax-container {
   overflow: visible;
   background-color: rgba(0, 0, 0, 0.39);
@@ -45,7 +56,7 @@ nav ul a:hover {
 /* BANNIERE */
 
 #index-banner {
-    background: url('/images/fond_2.jpg');
+    background: url('../images/fond_2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: 10%;
@@ -122,7 +133,7 @@ section#about .profile-list li {
 
 .profile-social .social li {
   display: inline-block;
-  margin: 0px 50px;
+  /* margin: 0px 50px; */
 }
 
 .profile-social .social li a {
@@ -133,7 +144,7 @@ section#about .profile-list li {
 
 #skill-slider {
   overflow: hidden;
-  width: 640px;
+  width: 100%;
   margin: auto;
 }
 
@@ -144,7 +155,7 @@ section#about .profile-list li {
 
 .single-skill {
   height: 490px;
-  width: 60px;
+  width: 60%;
   position: relative;
 }
 
